# bevy_axon

./: .gitignore  README.md  build.sh
axon/: Cargo.toml
axon/src/: core.rs  ffi.rs  lib.rs  sbin.rs  server.rs
cli/: Cargo.toml
cli/src/: connect.rs  main.rs  metadata.rs
demo/: Cargo.toml
demo/src/: main.rs
derive/: Cargo.toml
derive/src/: lib.rs
graphics/: Cargo.toml
graphics/src/: build.rs  core.rs  lib.rs  skin.rs  tile.rs  ui.rs
sbin/: Cargo.toml
sbin/src/: lib.rs
unity/: package.json
unity/Assets/: Bevy.prefab  Sprite - URP.mat  tilemap.prefab
unity/Bevy/: Bevy.asmdef  BevyBehaviour.cs  BevyClient.cs  BevyEventAttribute.cs  BevyObject.cs  BevyObjectTypeAttribute.cs  BevyValueBehaviour.cs  BevyVariantAttribute.cs  IBevyBehaviour.cs  NativeBuffer.cs  Sbin.cs
unity/BevyEditor/: BevyClientEditor.cs  BevyEditor.asmdef  BevyObjectTypeDrawer.cs  BevyWindow.cs  Meta.cs
unity/BevyGraphics/: BevyColor.cs  BevyGraphics.asmdef  BevyMovePosition.cs  BevyPage.cs  BevyPosition.cs  BevyRotation.cs  BevyScale.cs  BevySize.cs  BevySkin.cs  BevySkinProvider.cs  BevyTilemap.cs  Gen.cs  IBevyPageDataBind.cs  IBevyPageSetData.cs  axon.json
unity/Plugins/MacOS/arm64/: libbevy_axon.dylib
unity/Plugins/MacOS/x86_64/: libbevy_axon.dylib
