[package]
name = "bevy_axon"
version = "0.1.2"
edition = "2021"
description = "Bevy Axon"
license = "MIT"
repository = "https://github.com/hailongz-dev/bevy_axon"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "bevy_log",
], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bevy_renet = { version = "4.0.0", optional = true }
renet = { version = "2.0.0", optional = true }
renet_netcode = { version = "2.0.0", optional = true }
bevy_axon_derive = { path = "../derive", optional = true }
serde_sbin = { path = "../sbin", optional = true }
serde_bytes = "0.11.19"

[features]
default = []
server = [
    "dep:bevy_renet",
    "dep:bevy",
    "dep:serde",
    "dep:serde_sbin",
]
ffi = ["dep:renet", "dep:renet_netcode"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
