[package]
name = "bevy_axon_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axon"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
renet = "2.0.0"
renet_netcode = "2.0.0"
clap = { version = "4.5", features = ["derive"] }
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

