[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
bevy = { version = "0.18.0", default-features = false, features = [
    "bevy_log",
    "debug",
] }
bevy_renet = { version = "4.0.0" }
bevy_axon = { path = "../axon", features = ["server"] }
bevy_axon_derive = { path = "../derive" }
serde = { version = "1.0", features = ["derive"] }
serde_sbin = { path = "../sbin" }
