[package]
name = "bevy_axon_graphics"
version = "0.1.2"
edition = "2021"
description = "Bevy Axon Graphics"
license = "MIT"
repository = "https://github.com/hailongz-dev/bevy_axon"
build = "src/build.rs"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "bevy_log",
    "debug",
] }
bevy_renet = { version = "4.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_axon = { path = "../axon", features = ["server"] }
bevy_axon_derive = { path = "../derive" }

[build-dependencies]
bevy_axon_cli = { path = "../cli" }

[features]
default = []
generate-metadata = []

